// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render properly 1`] = `
<div>
  <div
    class="css-15zo3uz"
  >
    <h1
      class="css-1au0599"
    />
    <h2
      class="css-140lofm"
    />
    <div
      class="css-1izl14o"
    />
  </div>
</div>
`;

exports[`<Card /> should render properly with children 1`] = `
<div>
  <div
    class="css-15zo3uz"
  >
    <h1
      class="css-1au0599"
    />
    <h2
      class="css-140lofm"
    />
    <div
      class="css-1izl14o"
    >
      <div>
        Children
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render properly with title and subtitle 1`] = `
<div>
  <div
    class="css-15zo3uz"
  >
    <h1
      class="css-1au0599"
    >
      Title
    </h1>
    <h2
      class="css-140lofm"
    >
      Subtitle
    </h2>
    <div
      class="css-1izl14o"
    />
  </div>
</div>
`;
